Added partials plugin, some corrections

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,13 @@
 </head>
 
 <body>
-    <h1>Hello World!</h1>
-    <div class="img-wrapper"></div>
+    <header></header>
+    <main>
+        <hero></hero>
+        <h1>Hello World!</h1>
+        <div class="img-wrapper"></div>
+        <section1></section1>
+    </main>
 </body>
 
 </html>
