--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
@@ -10,10 +11,6 @@
 <body>
     <header></header>
     <main>
-        <hero></hero>
-        <h1>Hello World!</h1>
-        <div class="img-wrapper"></div>
-        <section1></section1>
     </main>
 </body>
 
